--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>F-Z Layout</title>
+    <title>Internet History</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/71f2ba1586.js" crossorigin="anonymous"></script>
 </head>
@@ -13,16 +13,16 @@
         <nav class="main">
             <ul>
                 <li>
-                    <a href="#">Home</a>
+                    <a href="#" class="btn">Home</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#" class="btn">About</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="#" class="btn">Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#" class="btn">Info</a>
                 </li>
             </ul>
 
@@ -30,7 +30,7 @@
 
     <section class="top-container">
         <header class="showcase">
-            <h1>Web Preview</h1>
+            <h1>Internet History</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                 been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
                 scrambled it to make a type specimen book. It was popularised in the 1960s with the release of
@@ -39,40 +39,39 @@
             <a href="#" class="btn">Read More</a>
         </header>
         <div class="top-box top-box-a">
-            <h4>Membership</h4>
-            <p class="Explore">Explore</p>
+            <h4>Additional Links</h4>
+            <p class="Explore">Recommended Journals</p>
             <a href="" class="btn">Begin Search</a>
         </div>
         <div class="top-box top-box-b">
-            <h4>Membership</h4>
-
-            <p class="price">Explore Again</p>
-            <a href="" class="btn">Begin Search</a>
+            <h4>Additional Links</h4>
+            <a href="" class="btn">Search</a>
         </div>
     </section>
         <!--Boxes-->
         <section class="boxes">
             <div class="div boxes">
-                <i class="fas fa-chart-pie fa-4x"></i>
-                <h3>analytics</h3>
+                <i class="fas fa-ethernet" style="font-size: 5.73em;"></i>
+                <h3>Pre-Internet</h3>
+                docker --context myacicontext run -p 80:80 nginx
+                It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout. </P>
+            </div>
+            <div class="div boxes">
+                <i class="fas fa-plus-circle" style="font-size: 5.73em;"></i>
+                <h3>Web 2.0</h3>
                 <P>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. </P>
             </div>
             <div class="div boxes">
-                <i class="fas fa-globe fa-4x"></i>
-                <h3>marketing</h3>
-                <P>It is a long established fact that a reader will be distracted by the
-                    readable content of a page when looking at its layout. </P>
-            </div>
-            <div class="div boxes">
-                <i class="fas fa-cog fa-4x"></i>
-                <h3>Development</h3>
+                <i class="fas fa-dice-three" style="font-size: 5.73em;"></i>
+                <h3>Web 3.0</h3>
                 <P>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. </P>
             </div>
             <div class="div boxes">
                 <i class="fas fa-users fa-6x"></i>
-                <h3>Support</h3>
+                <h3>Social Media</h3>
                 <P>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. </P>
             </div>
@@ -81,7 +80,7 @@
         <section class="info">
             <img src="img/1960s.png" alt="">
             <div>
-                <h3>Your Buisines</h3>
+                <h2>Evolution Phases</h2>
                 <a href="#" Class="btn">Learn More</a>
             </div>
         </section>
@@ -89,18 +88,16 @@
         <!--Portfolio-->
 
         <section class="portfolio">
-            <img src="http://source.unsplash.com/random/200x200" alt="">
-            <img src="http://source.unsplash.com/random/201x200" alt="">
-            <img src="http://source.unsplash.com/random/202x200" alt="">
-            <img src="http://source.unsplash.com/random/203x200" alt="">
-            <img src="http://source.unsplash.com/random/204x200" alt="">
-            <img src="http://source.unsplash.com/random/205x200" alt="">
+            <img src="img/evolution.png" alt="">
+            <img src="img/arch.jpg" alt="">
+            <img src="img/internet-www_evolution.jpg" alt="">
+            <img src="img/Figure-1.-The-next-step-in-internet-evolution.jpg" alt="">
 
         </section>
 
         <!-- Footer -->
         <footer>
-            <p>GridBiz & copy; 2018</p>
+            <p>IS Co.</p>
         </footer>
 
 
