--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,11 +31,8 @@
     <section class="top-container">
         <header class="showcase">
             <h1>Internet History</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-                been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It was popularised in the 1960s with the release of
-                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-                Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>The Internet started in the 1960s as a way for government researchers to share inform
+                computer or have magnetic computer tapes sent through the conventional postal system.</p>
             <a href="#" class="btn">Read More</a>
         </header>
         <div class="top-box top-box-a">
@@ -53,8 +50,7 @@
             <div class="div boxes">
                 <i class="fas fa-ethernet" style="font-size: 5.73em;"></i>
                 <h3>Pre-Internet</h3>
-                docker --context myacicontext run -p 80:80 nginx
-                It is a long established fact that a reader will be distracted by the
+                <p>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. </P>
             </div>
             <div class="div boxes">
