--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,25 +49,25 @@
         <section class="boxes">
             <div class="div boxes">
                 <i class="fas fa-ethernet" style="font-size: 5.73em;"></i>
-                <h3>Pre-Internet</h3>
+                <a href="#" class="btn">Pre-Internet</a>
                 <p>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. </P>
             </div>
             <div class="div boxes">
                 <i class="fas fa-plus-circle" style="font-size: 5.73em;"></i>
-                <h3>Web 2.0</h3>
+                <a href="#" class="btn">Web 2.0</a>
                 <P>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. </P>
             </div>
             <div class="div boxes">
                 <i class="fas fa-dice-three" style="font-size: 5.73em;"></i>
-                <h3>Web 3.0</h3>
+                <a href="#" class="btn">Web 3.0</a>
                 <P>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. </P>
             </div>
             <div class="div boxes">
-                <i class="fas fa-users fa-6x"></i>
-                <h3>Social Media</h3>
+                <i class="fas fa-users fa-6x" style="font-size: 5.73em;"></i>
+                <a href="#" class="btn">Social Media</a>
                 <P>It is a long established fact that a reader will be distracted by the
                     readable content of a page when looking at its layout. </P>
             </div>
