--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,10 +16,10 @@
                     <a href="#" class="btn">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="btn">About</a>
+                    <a href="#" class="btn">Resources</a>
                 </li>
                 <li>
-                    <a href="#" class="btn">Services</a>
+                    <a href="#" class="btn">General</a>
                 </li>
                 <li>
                     <a href="#" class="btn">Info</a>
@@ -31,6 +31,7 @@
     <section class="top-container">
         <header class="showcase">
             <h1>Internet History</h1>
+            <img src="img/1960s.png" alt="" style="width:50%">
             <p>The Internet started in the 1960s as a way for government researchers to share inform
                 computer or have magnetic computer tapes sent through the conventional postal system.</p>
             <a href="#" class="btn">Read More</a>
@@ -74,29 +75,20 @@
         </section>
         <!--info-->
         <section class="info">
-            <img src="img/1960s.png" alt="">
-            <div>
-                <h2>Evolution Phases</h2>
-                <a href="#" Class="btn">Learn More</a>
-            </div>
+            <h2>Evolution Phases</h2>
+                <div>
+                    <img src="img/evolution.png" alt="" style="width:50%">
+                    <img src="img/arch.jpg" alt="" style="width:50%">
+                    <img src="img/internet-www_evolution.jpg" alt="" style="width:50%">
+                    <img src="img/Figure-1.-The-next-step-in-internet-evolution.jpg" alt="" style="width:100%">
+                </div>
         </section>
 
         <!--Portfolio-->
 
-        <section class="portfolio">
-            <img src="img/evolution.png" alt="">
-            <img src="img/arch.jpg" alt="">
-            <img src="img/internet-www_evolution.jpg" alt="">
-            <img src="img/Figure-1.-The-next-step-in-internet-evolution.jpg" alt="">
-
-        </section>
-
-        <!-- Footer -->
         <footer>
             <p>IS Co.</p>
         </footer>
-
-
 
     </div>
         <!--Wrapper ends-->
